create login join update UserController build.gradle

--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -5,6 +5,18 @@
     <title>join</title>
 </head>
 <body>
-
+<div class="container">
+    <form action="user/join" method="post">
+        <label for="email"></label>
+        <input type="text" id="email" name="email" placeholder="E-mail">
+        <label for="userName"></label>
+        <input type="text" id="userName" name="userName" placeholder="Name">
+        <label for="userPwd"></label>
+        <input type="password" id="userPwd" name="userPwd" placeholder="Pwd">
+        <label for="phone"></label>
+        <input type="text" id="phone" name="phone" placeholder="Phone">
+        <input type="submit" value="회원가입">
+    </form>
+</div>
 </body>
 </html>
