--- a/src/main/resources/templates/items/updateItemForm.html
+++ b/src/main/resources/templates/items/updateItemForm.html
@@ -1,32 +1,38 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head th:replace="fragments/header :: header"/>
+
 <body>
 <div class="container">
 
     <div th:replace="fragments/bodyHeader :: bodyHeader"/>
 
-    <form th:action="@{/items/new}" th:object="${form}" method="post">
+    <form th:object="${form}" method="post">
+        <!-- id -->
+        <input type="hidden" th:field="*{id}"/>
         <div class="form-group">
             <label th:for="name">상품명</label>
-            <input type="text" th:field="*{name}" class="form-control" placeholder="이름을 입력하세요">
+            <input type="text" th:field="*{name}"
+                   class="form-control" placeholder="이름을 입력하세요"/>
         </div>
         <div class="form-group">
             <label th:for="price">가격</label>
-            <input type="number" th:field="*{price}" class="form-control" placeholder="가격을 입력하세요">
+            <input type="number" th:field="*{price}"
+                   class="form-control" placeholder="가격을 입력하세요"/>
         </div>
         <div class="form-group">
-            <label th:for="stockQuantity">재고수량</label>
-            <input type="number" th:field="*{stockQuantity}" class="form-control" placeholder="수량을 입력하세요">
+            <label th:for="stockQuantity">수량</label>
+            <input type="number" th:field="*{stockQuantity}"
+                   class="form-control" placeholder="수량을 입력하세요"/>
         </div>
         <div class="form-group">
             <label th:for="main">주메뉴</label>
-            <input type="text" th:field="*{main}" class="form-control" placeholder="주메뉴를 입력하세요">
+            <input type="text" th:field="*{main}"
+                   class="form-control" placeholder="주메뉴를 입력하세요"/>
         </div>
-        <br>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-    <br>
 
     <div th:replace="fragments/footer :: footer"/>
 
